parte3/y.output
Terminals unused in grammar

    AND
    OR
    MENOS_IGUAL
    MENOS_MENOS


State 114 conflicts: 1 shift/reduce


Grammar

    0 $accept: S $end

    1 S: CMDs
    2  | ε

    3 CMDs: CMDs CMD
    4     | CMD

    5 CMD: CMD_LET ';'
    6    | CMD_VAR ';'
    7    | CMD_CONST ';'
    8    | CMD_IF
    9    | CMD_WHILE
   10    | CMD_FOR
   11    | PRINT E ';'
   12    | E ';'
   13    | '{' CMDs '}'
   14    | ';'

   15 CMD_LET: LET LET_VARs

   16 LET_VARs: LET_VAR ',' LET_VARs
   17         | LET_VAR

   18 LET_VAR: ID
   19        | ID '=' E

   20 CMD_VAR: VAR VAR_VARs

   21 VAR_VARs: VAR_VAR ',' VAR_VARs
   22         | VAR_VAR

   23 VAR_VAR: ID
   24        | ID '=' E

   25 CMD_CONST: CONST CONST_VARs

   26 CONST_VARs: CONST_VAR ',' CONST_VARs
   27           | CONST_VAR

   28 CONST_VAR: ID '=' E

   29 CMD_IF: IF '(' E ')' CMD
   30       | IF '(' E ')' CMD ELSE CMD

   31 CMD_WHILE: WHILE '(' E ')' CMD

   32 CMD_FOR: FOR '(' E_opt ';' E_opt ';' E_opt ')' CMD

   33 E_opt: E
   34      | ε

   35 LVALUE: ID

   36 LVALUEPROP: E '.' ID
   37           | E '[' E ']'

   38 E: LVALUE '=' E
   39  | LVALUE MAIS_IGUAL E
   40  | LVALUEPROP '=' E
   41  | LVALUEPROP MAIS_IGUAL E
   42  | E '<' E
   43  | E '>' E
   44  | E ME_IG E
   45  | E MA_IG E
   46  | E IGUAL E
   47  | E DIF E
   48  | E '+' E
   49  | E '-' E
   50  | E '*' E
   51  | E '/' E
   52  | E '%' E
   53  | '-' E
   54  | '(' E ')'
   55  | LVALUE
   56  | LVALUEPROP
   57  | CINT
   58  | CDOUBLE
   59  | CSTRING
   60  | '{' '}'
   61  | '[' ']'
   62  | LVALUE MAIS_MAIS
   63  | MAIS_MAIS LVALUE


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 52
    '(' (40) 29 30 31 32 54
    ')' (41) 29 30 31 32 54
    '*' (42) 50
    '+' (43) 48
    ',' (44) 16 21 26
    '-' (45) 49 53
    '.' (46) 36
    '/' (47) 51
    ';' (59) 5 6 7 11 12 14 32
    '<' (60) 42
    '=' (61) 19 24 28 38 40
    '>' (62) 43
    '[' (91) 37 61
    ']' (93) 37 61
    '{' (123) 13 60
    '}' (125) 13 60
    error (256)
    ID (258) 18 19 23 24 28 35 36
    IF (259) 29 30
    ELSE (260) 30
    LET (261) 15
    CONST (262) 25
    VAR (263) 20
    PRINT (264) 11
    FOR (265) 32
    WHILE (266) 31
    CDOUBLE (267) 58
    CSTRING (268) 59
    CINT (269) 57
    AND (270)
    OR (271)
    ME_IG (272) 44
    MA_IG (273) 45
    DIF (274) 47
    IGUAL (275) 46
    MAIS_IGUAL (276) 39 41
    MAIS_MAIS (277) 62 63
    MENOS_IGUAL (278)
    MENOS_MENOS (279)
    UNARIO (280)


Nonterminals, with rules where they appear

    $accept (43)
        on left: 0
    S (44)
        on left: 1 2
        on right: 0
    CMDs (45)
        on left: 3 4
        on right: 1 3 13
    CMD (46)
        on left: 5 6 7 8 9 10 11 12 13 14
        on right: 3 4 29 30 31 32
    CMD_LET (47)
        on left: 15
        on right: 5
    LET_VARs (48)
        on left: 16 17
        on right: 15 16
    LET_VAR (49)
        on left: 18 19
        on right: 16 17
    CMD_VAR (50)
        on left: 20
        on right: 6
    VAR_VARs (51)
        on left: 21 22
        on right: 20 21
    VAR_VAR (52)
        on left: 23 24
        on right: 21 22
    CMD_CONST (53)
        on left: 25
        on right: 7
    CONST_VARs (54)
        on left: 26 27
        on right: 25 26
    CONST_VAR (55)
        on left: 28
        on right: 26 27
    CMD_IF (56)
        on left: 29 30
        on right: 8
    CMD_WHILE (57)
        on left: 31
        on right: 9
    CMD_FOR (58)
        on left: 32
        on right: 10
    E_opt (59)
        on left: 33 34
        on right: 32
    LVALUE (60)
        on left: 35
        on right: 38 39 55 62 63
    LVALUEPROP (61)
        on left: 36 37
        on right: 40 41 56
    E (62)
        on left: 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63
        on right: 11 12 19 24 28 29 30 31 33 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54


State 0

    0 $accept: • S $end

    ID         shift, and go to state 1
    IF         shift, and go to state 2
    LET        shift, and go to state 3
    CONST      shift, and go to state 4
    VAR        shift, and go to state 5
    PRINT      shift, and go to state 6
    FOR        shift, and go to state 7
    WHILE      shift, and go to state 8
    CDOUBLE    shift, and go to state 9
    CSTRING    shift, and go to state 10
    CINT       shift, and go to state 11
    MAIS_MAIS  shift, and go to state 12
    '-'        shift, and go to state 13
    '['        shift, and go to state 14
    '('        shift, and go to state 15
    ';'        shift, and go to state 16
    '{'        shift, and go to state 17

    $default  reduce using rule 2 (S)

    S           go to state 18
    CMDs        go to state 19
    CMD         go to state 20
    CMD_LET     go to state 21
    CMD_VAR     go to state 22
    CMD_CONST   go to state 23
    CMD_IF      go to state 24
    CMD_WHILE   go to state 25
    CMD_FOR     go to state 26
    LVALUE      go to state 27
    LVALUEPROP  go to state 28
    E           go to state 29


State 1

   35 LVALUE: ID •

    $default  reduce using rule 35 (LVALUE)


State 2

   29 CMD_IF: IF • '(' E ')' CMD
   30       | IF • '(' E ')' CMD ELSE CMD

    '('  shift, and go to state 30


State 3

   15 CMD_LET: LET • LET_VARs

    ID  shift, and go to state 31

    LET_VARs  go to state 32
    LET_VAR   go to state 33


State 4

   25 CMD_CONST: CONST • CONST_VARs

    ID  shift, and go to state 34

    CONST_VARs  go to state 35
    CONST_VAR   go to state 36


State 5

   20 CMD_VAR: VAR • VAR_VARs

    ID  shift, and go to state 37

    VAR_VARs  go to state 38
    VAR_VAR   go to state 39


State 6

   11 CMD: PRINT • E ';'

    ID         shift, and go to state 1
    CDOUBLE    shift, and go to state 9
    CSTRING    shift, and go to state 10
    CINT       shift, and go to state 11
    MAIS_MAIS  shift, and go to state 12
    '-'        shift, and go to state 13
    '['        shift, and go to state 14
    '('        shift, and go to state 15
    '{'        shift, and go to state 40

    LVALUE      go to state 27
    LVALUEPROP  go to state 28
    E           go to state 41


State 7

   32 CMD_FOR: FOR • '(' E_opt ';' E_opt ';' E_opt ')' CMD

    '('  shift, and go to state 42


State 8

   31 CMD_WHILE: WHILE • '(' E ')' CMD

    '('  shift, and go to state 43


State 9

   58 E: CDOUBLE •

    $default  reduce using rule 58 (E)


State 10

   59 E: CSTRING •

    $default  reduce using rule 59 (E)


State 11

   57 E: CINT •

    $default  reduce using rule 57 (E)


State 12

   63 E: MAIS_MAIS • LVALUE

    ID  shift, and go to state 1

    LVALUE  go to state 44


State 13

   53 E: '-' • E

    ID         shift, and go to state 1
    CDOUBLE    shift, and go to state 9
    CSTRING    shift, and go to state 10
    CINT       shift, and go to state 11
    MAIS_MAIS  shift, and go to state 12
    '-'        shift, and go to state 13
    '['        shift, and go to state 14
    '('        shift, and go to state 15
    '{'        shift, and go to state 40

    LVALUE      go to state 27
    LVALUEPROP  go to state 28
    E           go to state 45


State 14

   61 E: '[' • ']'

    ']'  shift, and go to state 46


State 15

   54 E: '(' • E ')'

    ID         shift, and go to state 1
    CDOUBLE    shift, and go to state 9
    CSTRING    shift, and go to state 10
    CINT       shift, and go to state 11
    MAIS_MAIS  shift, and go to state 12
    '-'        shift, and go to state 13
    '['        shift, and go to state 14
    '('        shift, and go to state 15
    '{'        shift, and go to state 40

    LVALUE      go to state 27
    LVALUEPROP  go to state 28
    E           go to state 47


State 16

   14 CMD: ';' •

    $default  reduce using rule 14 (CMD)


State 17

   13 CMD: '{' • CMDs '}'
   60 E: '{' • '}'

    ID         shift, and go to state 1
    IF         shift, and go to state 2
    LET        shift, and go to state 3
    CONST      shift, and go to state 4
    VAR        shift, and go to state 5
    PRINT      shift, and go to state 6
    FOR        shift, and go to state 7
    WHILE      shift, and go to state 8
    CDOUBLE    shift, and go to state 9
    CSTRING    shift, and go to state 10
    CINT       shift, and go to state 11
    MAIS_MAIS  shift, and go to state 12
    '-'        shift, and go to state 13
    '['        shift, and go to state 14
    '('        shift, and go to state 15
    ';'        shift, and go to state 16
    '{'        shift, and go to state 17
    '}'        shift, and go to state 48

    CMDs        go to state 49
    CMD         go to state 20
    CMD_LET     go to state 21
    CMD_VAR     go to state 22
    CMD_CONST   go to state 23
    CMD_IF      go to state 24
    CMD_WHILE   go to state 25
    CMD_FOR     go to state 26
    LVALUE      go to state 27
    LVALUEPROP  go to state 28
    E           go to state 29


State 18

    0 $accept: S • $end

    $end  shift, and go to state 50


State 19

    1 S: CMDs •
    3 CMDs: CMDs • CMD

    ID         shift, and go to state 1
    IF         shift, and go to state 2
    LET        shift, and go to state 3
    CONST      shift, and go to state 4
    VAR        shift, and go to state 5
    PRINT      shift, and go to state 6
    FOR        shift, and go to state 7
    WHILE      shift, and go to state 8
    CDOUBLE    shift, and go to state 9
    CSTRING    shift, and go to state 10
    CINT       shift, and go to state 11
    MAIS_MAIS  shift, and go to state 12
    '-'        shift, and go to state 13
    '['        shift, and go to state 14
    '('        shift, and go to state 15
    ';'        shift, and go to state 16
    '{'        shift, and go to state 17

    $default  reduce using rule 1 (S)

    CMD         go to state 51
    CMD_LET     go to state 21
    CMD_VAR     go to state 22
    CMD_CONST   go to state 23
    CMD_IF      go to state 24
    CMD_WHILE   go to state 25
    CMD_FOR     go to state 26
    LVALUE      go to state 27
    LVALUEPROP  go to state 28
    E           go to state 29


State 20

    4 CMDs: CMD •

    $default  reduce using rule 4 (CMDs)


State 21

    5 CMD: CMD_LET • ';'

    ';'  shift, and go to state 52


State 22

    6 CMD: CMD_VAR • ';'

    ';'  shift, and go to state 53


State 23

    7 CMD: CMD_CONST • ';'

    ';'  shift, and go to state 54


State 24

    8 CMD: CMD_IF •

    $default  reduce using rule 8 (CMD)


State 25

    9 CMD: CMD_WHILE •

    $default  reduce using rule 9 (CMD)


State 26

   10 CMD: CMD_FOR •

    $default  reduce using rule 10 (CMD)


State 27

   38 E: LVALUE • '=' E
   39  | LVALUE • MAIS_IGUAL E
   55  | LVALUE •
   62  | LVALUE • MAIS_MAIS

    MAIS_IGUAL  shift, and go to state 55
    MAIS_MAIS   shift, and go to state 56
    '='         shift, and go to state 57

    $default  reduce using rule 55 (E)


State 28

   40 E: LVALUEPROP • '=' E
   41  | LVALUEPROP • MAIS_IGUAL E
   56  | LVALUEPROP •

    MAIS_IGUAL  shift, and go to state 58
    '='         shift, and go to state 59

    $default  reduce using rule 56 (E)


State 29

   12 CMD: E • ';'
   36 LVALUEPROP: E • '.' ID
   37           | E • '[' E ']'
   42 E: E • '<' E
   43  | E • '>' E
   44  | E • ME_IG E
   45  | E • MA_IG E
   46  | E • IGUAL E
   47  | E • DIF E
   48  | E • '+' E
   49  | E • '-' E
   50  | E • '*' E
   51  | E • '/' E
   52  | E • '%' E

    ME_IG  shift, and go to state 60
    MA_IG  shift, and go to state 61
    DIF    shift, and go to state 62
    IGUAL  shift, and go to state 63
    '<'    shift, and go to state 64
    '>'    shift, and go to state 65
    '+'    shift, and go to state 66
    '-'    shift, and go to state 67
    '*'    shift, and go to state 68
    '/'    shift, and go to state 69
    '%'    shift, and go to state 70
    '.'    shift, and go to state 71
    '['    shift, and go to state 72
    ';'    shift, and go to state 73


State 30

   29 CMD_IF: IF '(' • E ')' CMD
   30       | IF '(' • E ')' CMD ELSE CMD

    ID         shift, and go to state 1
    CDOUBLE    shift, and go to state 9
    CSTRING    shift, and go to state 10
    CINT       shift, and go to state 11
    MAIS_MAIS  shift, and go to state 12
    '-'        shift, and go to state 13
    '['        shift, and go to state 14
    '('        shift, and go to state 15
    '{'        shift, and go to state 40

    LVALUE      go to state 27
    LVALUEPROP  go to state 28
    E           go to state 74


State 31

   18 LET_VAR: ID •
   19        | ID • '=' E

    '='  shift, and go to state 75

    $default  reduce using rule 18 (LET_VAR)


State 32

   15 CMD_LET: LET LET_VARs •

    $default  reduce using rule 15 (CMD_LET)


State 33

   16 LET_VARs: LET_VAR • ',' LET_VARs
   17         | LET_VAR •

    ','  shift, and go to state 76

    $default  reduce using rule 17 (LET_VARs)


State 34

   28 CONST_VAR: ID • '=' E

    '='  shift, and go to state 77


State 35

   25 CMD_CONST: CONST CONST_VARs •

    $default  reduce using rule 25 (CMD_CONST)


State 36

   26 CONST_VARs: CONST_VAR • ',' CONST_VARs
   27           | CONST_VAR •

    ','  shift, and go to state 78

    $default  reduce using rule 27 (CONST_VARs)


State 37

   23 VAR_VAR: ID •
   24        | ID • '=' E

    '='  shift, and go to state 79

    $default  reduce using rule 23 (VAR_VAR)


State 38

   20 CMD_VAR: VAR VAR_VARs •

    $default  reduce using rule 20 (CMD_VAR)


State 39

   21 VAR_VARs: VAR_VAR • ',' VAR_VARs
   22         | VAR_VAR •

    ','  shift, and go to state 80

    $default  reduce using rule 22 (VAR_VARs)


State 40

   60 E: '{' • '}'

    '}'  shift, and go to state 48


State 41

   11 CMD: PRINT E • ';'
   36 LVALUEPROP: E • '.' ID
   37           | E • '[' E ']'
   42 E: E • '<' E
   43  | E • '>' E
   44  | E • ME_IG E
   45  | E • MA_IG E
   46  | E • IGUAL E
   47  | E • DIF E
   48  | E • '+' E
   49  | E • '-' E
   50  | E • '*' E
   51  | E • '/' E
   52  | E • '%' E

    ME_IG  shift, and go to state 60
    MA_IG  shift, and go to state 61
    DIF    shift, and go to state 62
    IGUAL  shift, and go to state 63
    '<'    shift, and go to state 64
    '>'    shift, and go to state 65
    '+'    shift, and go to state 66
    '-'    shift, and go to state 67
    '*'    shift, and go to state 68
    '/'    shift, and go to state 69
    '%'    shift, and go to state 70
    '.'    shift, and go to state 71
    '['    shift, and go to state 72
    ';'    shift, and go to state 81


State 42

   32 CMD_FOR: FOR '(' • E_opt ';' E_opt ';' E_opt ')' CMD

    ID         shift, and go to state 1
    CDOUBLE    shift, and go to state 9
    CSTRING    shift, and go to state 10
    CINT       shift, and go to state 11
    MAIS_MAIS  shift, and go to state 12
    '-'        shift, and go to state 13
    '['        shift, and go to state 14
    '('        shift, and go to state 15
    '{'        shift, and go to state 40

    $default  reduce using rule 34 (E_opt)

    E_opt       go to state 82
    LVALUE      go to state 27
    LVALUEPROP  go to state 28
    E           go to state 83


State 43

   31 CMD_WHILE: WHILE '(' • E ')' CMD

    ID         shift, and go to state 1
    CDOUBLE    shift, and go to state 9
    CSTRING    shift, and go to state 10
    CINT       shift, and go to state 11
    MAIS_MAIS  shift, and go to state 12
    '-'        shift, and go to state 13
    '['        shift, and go to state 14
    '('        shift, and go to state 15
    '{'        shift, and go to state 40

    LVALUE      go to state 27
    LVALUEPROP  go to state 28
    E           go to state 84


State 44

   63 E: MAIS_MAIS LVALUE •

    $default  reduce using rule 63 (E)


State 45

   36 LVALUEPROP: E • '.' ID
   37           | E • '[' E ']'
   42 E: E • '<' E
   43  | E • '>' E
   44  | E • ME_IG E
   45  | E • MA_IG E
   46  | E • IGUAL E
   47  | E • DIF E
   48  | E • '+' E
   49  | E • '-' E
   50  | E • '*' E
   51  | E • '/' E
   52  | E • '%' E
   53  | '-' E •

    '.'  shift, and go to state 71
    '['  shift, and go to state 72

    $default  reduce using rule 53 (E)


State 46

   61 E: '[' ']' •

    $default  reduce using rule 61 (E)


State 47

   36 LVALUEPROP: E • '.' ID
   37           | E • '[' E ']'
   42 E: E • '<' E
   43  | E • '>' E
   44  | E • ME_IG E
   45  | E • MA_IG E
   46  | E • IGUAL E
   47  | E • DIF E
   48  | E • '+' E
   49  | E • '-' E
   50  | E • '*' E
   51  | E • '/' E
   52  | E • '%' E
   54  | '(' E • ')'

    ME_IG  shift, and go to state 60
    MA_IG  shift, and go to state 61
    DIF    shift, and go to state 62
    IGUAL  shift, and go to state 63
    '<'    shift, and go to state 64
    '>'    shift, and go to state 65
    '+'    shift, and go to state 66
    '-'    shift, and go to state 67
    '*'    shift, and go to state 68
    '/'    shift, and go to state 69
    '%'    shift, and go to state 70
    '.'    shift, and go to state 71
    '['    shift, and go to state 72
    ')'    shift, and go to state 85


State 48

   60 E: '{' '}' •

    $default  reduce using rule 60 (E)


State 49

    3 CMDs: CMDs • CMD
   13 CMD: '{' CMDs • '}'

    ID         shift, and go to state 1
    IF         shift, and go to state 2
    LET        shift, and go to state 3
    CONST      shift, and go to state 4
    VAR        shift, and go to state 5
    PRINT      shift, and go to state 6
    FOR        shift, and go to state 7
    WHILE      shift, and go to state 8
    CDOUBLE    shift, and go to state 9
    CSTRING    shift, and go to state 10
    CINT       shift, and go to state 11
    MAIS_MAIS  shift, and go to state 12
    '-'        shift, and go to state 13
    '['        shift, and go to state 14
    '('        shift, and go to state 15
    ';'        shift, and go to state 16
    '{'        shift, and go to state 17
    '}'        shift, and go to state 86

    CMD         go to state 51
    CMD_LET     go to state 21
    CMD_VAR     go to state 22
    CMD_CONST   go to state 23
    CMD_IF      go to state 24
    CMD_WHILE   go to state 25
    CMD_FOR     go to state 26
    LVALUE      go to state 27
    LVALUEPROP  go to state 28
    E           go to state 29


State 50

    0 $accept: S $end •

    $default  accept


State 51

    3 CMDs: CMDs CMD •

    $default  reduce using rule 3 (CMDs)


State 52

    5 CMD: CMD_LET ';' •

    $default  reduce using rule 5 (CMD)


State 53

    6 CMD: CMD_VAR ';' •

    $default  reduce using rule 6 (CMD)


State 54

    7 CMD: CMD_CONST ';' •

    $default  reduce using rule 7 (CMD)


State 55

   39 E: LVALUE MAIS_IGUAL • E

    ID         shift, and go to state 1
    CDOUBLE    shift, and go to state 9
    CSTRING    shift, and go to state 10
    CINT       shift, and go to state 11
    MAIS_MAIS  shift, and go to state 12
    '-'        shift, and go to state 13
    '['        shift, and go to state 14
    '('        shift, and go to state 15
    '{'        shift, and go to state 40

    LVALUE      go to state 27
    LVALUEPROP  go to state 28
    E           go to state 87


State 56

   62 E: LVALUE MAIS_MAIS •

    $default  reduce using rule 62 (E)


State 57

   38 E: LVALUE '=' • E

    ID         shift, and go to state 1
    CDOUBLE    shift, and go to state 9
    CSTRING    shift, and go to state 10
    CINT       shift, and go to state 11
    MAIS_MAIS  shift, and go to state 12
    '-'        shift, and go to state 13
    '['        shift, and go to state 14
    '('        shift, and go to state 15
    '{'        shift, and go to state 40

    LVALUE      go to state 27
    LVALUEPROP  go to state 28
    E           go to state 88


State 58

   41 E: LVALUEPROP MAIS_IGUAL • E

    ID         shift, and go to state 1
    CDOUBLE    shift, and go to state 9
    CSTRING    shift, and go to state 10
    CINT       shift, and go to state 11
    MAIS_MAIS  shift, and go to state 12
    '-'        shift, and go to state 13
    '['        shift, and go to state 14
    '('        shift, and go to state 15
    '{'        shift, and go to state 40

    LVALUE      go to state 27
    LVALUEPROP  go to state 28
    E           go to state 89


State 59

   40 E: LVALUEPROP '=' • E

    ID         shift, and go to state 1
    CDOUBLE    shift, and go to state 9
    CSTRING    shift, and go to state 10
    CINT       shift, and go to state 11
    MAIS_MAIS  shift, and go to state 12
    '-'        shift, and go to state 13
    '['        shift, and go to state 14
    '('        shift, and go to state 15
    '{'        shift, and go to state 40

    LVALUE      go to state 27
    LVALUEPROP  go to state 28
    E           go to state 90


State 60

   44 E: E ME_IG • E

    ID         shift, and go to state 1
    CDOUBLE    shift, and go to state 9
    CSTRING    shift, and go to state 10
    CINT       shift, and go to state 11
    MAIS_MAIS  shift, and go to state 12
    '-'        shift, and go to state 13
    '['        shift, and go to state 14
    '('        shift, and go to state 15
    '{'        shift, and go to state 40

    LVALUE      go to state 27
    LVALUEPROP  go to state 28
    E           go to state 91


State 61

   45 E: E MA_IG • E

    ID         shift, and go to state 1
    CDOUBLE    shift, and go to state 9
    CSTRING    shift, and go to state 10
    CINT       shift, and go to state 11
    MAIS_MAIS  shift, and go to state 12
    '-'        shift, and go to state 13
    '['        shift, and go to state 14
    '('        shift, and go to state 15
    '{'        shift, and go to state 40

    LVALUE      go to state 27
    LVALUEPROP  go to state 28
    E           go to state 92


State 62

   47 E: E DIF • E

    ID         shift, and go to state 1
    CDOUBLE    shift, and go to state 9
    CSTRING    shift, and go to state 10
    CINT       shift, and go to state 11
    MAIS_MAIS  shift, and go to state 12
    '-'        shift, and go to state 13
    '['        shift, and go to state 14
    '('        shift, and go to state 15
    '{'        shift, and go to state 40

    LVALUE      go to state 27
    LVALUEPROP  go to state 28
    E           go to state 93


State 63

   46 E: E IGUAL • E

    ID         shift, and go to state 1
    CDOUBLE    shift, and go to state 9
    CSTRING    shift, and go to state 10
    CINT       shift, and go to state 11
    MAIS_MAIS  shift, and go to state 12
    '-'        shift, and go to state 13
    '['        shift, and go to state 14
    '('        shift, and go to state 15
    '{'        shift, and go to state 40

    LVALUE      go to state 27
    LVALUEPROP  go to state 28
    E           go to state 94


State 64

   42 E: E '<' • E

    ID         shift, and go to state 1
    CDOUBLE    shift, and go to state 9
    CSTRING    shift, and go to state 10
    CINT       shift, and go to state 11
    MAIS_MAIS  shift, and go to state 12
    '-'        shift, and go to state 13
    '['        shift, and go to state 14
    '('        shift, and go to state 15
    '{'        shift, and go to state 40

    LVALUE      go to state 27
    LVALUEPROP  go to state 28
    E           go to state 95


State 65

   43 E: E '>' • E
